--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
 	font-family: "Atlas Grotesk";
 	src: url("https://pudding.cool/assets/fonts/atlas/AtlasGrotesk-Regular-Web.woff2") format("woff2");
 	font-weight: 400;
@@ -14,6 +14,15 @@
 	font-style: normal;
 	font-stretch: normal;
 	font-display: swap;
+} */
+
+@font-face {
+	font-family: "Tiempos Text";
+	src: url("https://pudding.cool/assets/fonts/tiempos/TiemposTextWeb-Bold.woff2") format("woff2");
+	font-weight: 700;
+	font-style: normal;
+	font-stretch: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -25,14 +34,7 @@
 	font-display: swap;
 }
 
-@font-face {
-	font-family: "Tiempos Text";
-	src: url("https://pudding.cool/assets/fonts/tiempos/TiemposTextWeb-Bold.woff2") format("woff2");
-	font-weight: 700;
-	font-style: normal;
-	font-stretch: normal;
-	font-display: swap;
-}
+
 
 @font-face {
 	font-family: "Atlas Typewriter";
