--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -27,7 +27,10 @@ mark {
 
 a, a:visited {
 	color: var(--color-link, blue);
-	text-decoration: 2px underline var(--color-link, blue);
+	text-decoration-line: underline;
+	text-decoration-style: solid;
+	text-decoration-color: var(--color-link, blue);
+	text-decoration-thickness: 2px;
 }
 
 a:hover {
