--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -19,9 +19,18 @@
 
 
 @font-face {
-	font-family: "Atlas Typewriter";
-	src: url("https://pudding.cool/assets/fonts/atlas/AtlasTypewriter-Medium-Web.woff2") format("woff2");
-	font-weight: 500;
+	font-family: "Atlas Grotesk";
+	src: url("https://pudding.cool/assets/fonts/atlas/AtlasGrotesk-Regular-Web.woff2") format("woff2");
+	font-weight: 400;
+	font-style: normal;
+	font-stretch: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Atlas Grotesk";
+	src: url("https://pudding.cool/assets/fonts/atlas/AtlasGrotesk-Bold-Web.woff2") format("woff2");
+	font-weight: 700;
 	font-style: normal;
 	font-stretch: normal;
 	font-display: swap;
